# Vision-LinkedIN

./: .env.example  .gitattributes  .gitignore  BUILD_STATUS.md  Dockerfile  LICENSE  README.md  VISION_BRD_v1.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
deploy/: DEPLOY.md  crontab.example  deploy.sh  preflight.sh
deploy/systemd/: vision-canary.service  vision-canary.timer  vision-council.service  vision-council.timer  vision-daily.service  vision-daily.timer  vision-expire.service  vision-expire.timer  vision-publisher.service  vision-publisher.timer  vision-retention.service  vision-retention.timer  vision-token.service  vision-token.timer  vision-web.service
docs/: DEPLOY.md  OPERATIONS.md  RUNBOOK.md  VIDEO_ARCHITECTURE.md
notebook/sessions/: 2026-07-08-autonomy-anime-and-cleanup.md  2026-07-08-brand-natural-voice-problem-series-vps-kit.md  2026-07-11-tech-content-diagram-hashtags-hardening.md
notebook/video_packs/: brahmastra-architecture.md
prep/: .council_recent_formats.json  .council_state.json  _check_env.py  _make_logo.py  _render_council_preview.py  _run_council_proof.py  _setup_env.py  clinical_ai_arch.mmd  clinical_ai_post.md  council_email_preview.html  council_hc_test.md  council_hc_test2.md  council_last.md  council_last_transcript.md  council_pkg_last.md  raft_prompts.md  sample_email.html  security_threatmodel.md  sources_seed.yaml  video_architecture.md  voice_profile.yaml  wf_council_stage2.js  wf_images.js  wf_phase1.js  wf_phase2.js  wf_phase3.js  wf_phase3_fix.js  wf_phase4.js  wf_phase4_fix.js
prep/imgtest/: _live_smoke.py
scripts/: attach_anime_and_resend.py  authorize_linkedin.py  backup.py  council.py  demo_approval.py  demo_draft.py  demo_full_run.py  fix_two_posts.py  make_reel_ai_drift.py  naturalize_council_with_image.py  post_contrast_sample.py  publish_clean_with_image.py  publish_clinical_ai.py  regen_natural_draft_and_resend.py  remove_image_repost_textonly.py  replace_live_post_dedash.py  sample_contrast_card.py  test_reel_end_to_end.py  vision_scheduler.ps1
spikes/: README.md  spike_linkedin.py
src/vision/: __init__.py  config.py  logging_setup.py
src/vision/approval/: __init__.py  edit_page.py  errors.py  service.py  state_errors.py  state_machine.py  tokens.py  web.py
src/vision/brahmastra/: __init__.py  client.py  errors.py  image_client.py
src/vision/cli/: __init__.py  council.py  daily.py  expire.py  publisher.py  retention.py  token.py
src/vision/council/: __init__.py  compose.py  deliberate.py  diagram.py  engine.py  formats.py  hashtags.py  problems.py  topics.py  visual.py  voices.py
src/vision/curate/: __init__.py  dedup.py  own_dedup.py  score.py  select.py
src/vision/db/: __init__.py  base.py  models.py  session.py
src/vision/db/migrations/: __init__.py  env.py  script.py.mako
src/vision/db/migrations/versions/: .gitkeep  0001_oauth_tokens_unique_provider_member.py  0002_alert_state.py  0003_council_draft_columns.py
src/vision/ingest/: __init__.py  feeds.py  normalise.py  sources.py
src/vision/mailer/: __init__.py  composer.py  dedup.py  sender.py  theme.py
src/vision/ops/: __init__.py  alerts.py  canary.py  feed_health.py  health.py  joblock.py  retention.py  run_record.py
src/vision/publish/: __init__.py  crypto.py  errors.py  image_upload.py  linkedin.py  oauth.py  token_refresh.py  worker.py
src/vision/synthesise/: __init__.py  pipeline.py  prompts.py  quality.py  schemas.py
src/vision/video/: __init__.py  assemble.py  notebooklm_pack.py  schema.py  upload.py  voiceover.py
src/vision/visuals/: __init__.py  card_renderer.py  decide.py  diagram_renderer.py  illustrate.py  signature.py  style_guide.py
tests/: __init__.py  conftest.py  test_alerting.py  test_approval_state_regression.py  test_approval_web.py  test_brahmastra_client.py  test_config.py  test_council.py  test_council_cli.py  test_council_diagram.py  test_council_diagram_writer.py  test_council_hashtags.py  test_council_visual.py  test_crypto_oauth.py  test_crypto_roundtrip.py  test_curate.py  test_daily_orchestration.py  test_deploy_smoke.py  test_expiry.py  test_failure_injection.py  test_image_final.py  test_ingest.py  test_integration_phase1.py  test_integration_phase2.py  test_integration_phase3.py  test_linkedin_client.py  test_mailer.py  test_mailer_url_safety.py  test_models_smoke.py  test_notebooklm_pack.py  test_observability.py  test_own_dedup.py  test_problems.py  test_publisher.py  test_retention.py  test_state_machine.py  test_synthesise.py  test_token_refresh.py  test_tokens.py  test_video_assemble.py  (+3 more)
