# ---------------------------------------------------------------------------
# Project VISION — package metadata & build configuration.
#
# WHY this shape: a src/ layout keeps the importable package isolated from the
# repo root (no accidental imports of tests/spikes), and PEP 621 metadata lets
# `pip install -e .` wire the console entry points used by the daily/publisher/
# token cron jobs described in BRD §10.2.
# ---------------------------------------------------------------------------

[build-system]
# setuptools is the reference PEP 517 backend; no exotic tooling needed for a
# pure-Python service, so we keep the build dependency surface minimal.
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vision-linkedin"
version = "0.1.0"
description = "VISION — a self-hosted daily AI-assisted LinkedIn insight engine (generate -> critique -> verify -> approve -> publish)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Vishnu Dattu Kurnuthala" }]
keywords = ["linkedin", "automation", "llm", "brahmastra", "healthcare", "ai"]

# Runtime dependencies. Versions are floored (not pinned) here; exact pins live
# in the deployment lockfile so the library stays installable across envs while
# production remains reproducible (BRD §22 config-over-code / reproducibility).
dependencies = [
    "sqlalchemy>=2.0",          # DB-agnostic ORM (SQLite dev / Postgres prod, BRD §22)
    "alembic>=1.13",            # schema migrations wired to the models' metadata
    "pydantic>=2.0",            # strict schema validation of LLM JSON contracts (§13.4)
    "pydantic-settings>=2.0",   # typed env-var loading for the Settings class (§Appendix A)
    "httpx>=0.27",              # async HTTP client for LinkedIn / email providers
    "feedparser>=6.0",          # RSS/Atom parsing for the ingest lane (FR-01)
    "pyyaml>=6.0",              # load the editable voice-profile YAML for synthesis prompts (§13.3/§22)
    "python-dateutil>=2.9",     # robust parsing of heterogeneous feed timestamps
    "tzdata>=2024.1",           # IANA tz database for zoneinfo on hosts without one (Windows)
    "jinja2>=3.1",              # approval-email + edit-page templating (§14)
    "fastapi>=0.110",           # always-on approval service (/approve /reject /edit)
    "python-multipart>=0.0.9",  # parse the approval POST form bodies (§14.3 edit/confirm)
    "uvicorn>=0.29",            # ASGI server for the FastAPI approval app
    "cryptography>=42.0",       # encrypt OAuth tokens at rest (NFR-05 / §11.6)
    "tenacity>=8.2",            # retry/backoff for transient feed/LLM/LinkedIn failures (NFR-07)
    "pillow>=10.0",             # deterministic stat/quote card rendering (§13.6 visuals lane)
    "matplotlib>=3.8",          # deterministic bar/line charts, headless Agg (§13.6 / D10)
    "edge-tts>=6.1",            # FREE headless TTS voice-over, no API key (§23 video lane 5b)
    "imageio-ffmpeg>=0.5",      # bundled ffmpeg binary for reel assembly, no system install
]

[project.optional-dependencies]
# Dev extras are installed with `pip install -e ".[dev]"`. Kept separate so the
# production image never ships test tooling.
dev = [
    "pytest>=8.0",            # test runner (BRD §18)
    "pytest-asyncio>=0.23",  # async test support for httpx-based clients
    "respx>=0.21",           # mock httpx requests (mock external deps, not internal logic)
    "ruff>=0.4",             # lint + format
]

[project.scripts]
# Console entry points map to the process model in BRD §10.2. They are wired to
# thin CLI stubs now; the real command implementations land in later phases.
vision-daily = "vision.cli.daily:main"
vision-council = "vision.cli.council:main"  # BRD §5: council content mode — 3-AI deliberation -> pending_approval draft + approval email
vision-publisher = "vision.publish.worker:main"  # FR-12/13/14: real publisher — publish approved & due drafts (§15.2/§15.4)
vision-token = "vision.publish.token_refresh:main"  # FR-17: daily proactive OAuth token refresh (§15.3)
vision-expire = "vision.cli.expire:main"  # FR-16: cron at cutoff (default 20:00 IST) auto-expires un-actioned drafts
vision-canary = "vision.ops.canary:main"  # §17/NFR-08: external health canary — pings /healthz, alerts + exits non-zero on failure
vision-retention = "vision.cli.retention:main"  # §22.9: weekly archive -> rclone Drive backup -> verify -> prune + VACUUM (fail-closed)

[tool.setuptools.packages.find]
# Discover the `vision` package (and subpackages) under src/ only.
where = ["src"]

[tool.pytest.ini_options]
# Point pytest at the src/ layout and the tests/ dir; asyncio auto mode lets
# async tests run without a per-test decorator.
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
# Match the repo's line-length convention and target the minimum runtime.
line-length = 100
target-version = "py311"
src = ["src", "tests"]
